--- a/index.html
+++ b/index.html
@@ -101,17 +101,26 @@
     <!--categgries -->
     <div class="container my-5">
       <div class="row g-4">
-        <div class="col-lg-4">
-          <div class="p-3 border bg-light">Custom column padding</div>
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+          </div>
         </div>
-        <div class="col-lg-4">
-          <div class="p-3 border bg-light">Custom column padding</div>
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+          </div>
         </div>
-        <div class="col-lg-4">
-          <div class="p-3 border bg-light">Custom column padding</div>
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+          </div>
         </div>
       </div>
-    </div>
+      </div>
   </main>
   <footer>
 
