--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+            <div class="row p-5 info-background bg-gradient d-flex align-items-center">
               <div class="col-lg-7">
                 <h1>Cool Dude Headphone
                 </h1>
                 <p>
                   This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                   <h1>$420</h1>
-                  <button class="btn btn-warning">Buy Now</button>
+                  <button class="panda-btn-color">Buy Now</button>
               </div>
               <div class="col-lg-5">
                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -58,14 +58,14 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+            <div class="row p-5 info-background bg-gradient d-flex align-items-center">
               <div class="col-lg-7">
                 <h1>Mega LCD TV For Sports
                 </h1>
                 <p>
                   This is the best tv in the world for people who just want to waste time in front of tv.
                   <h1>$1200</h1>
-                  <button class="btn btn-warning">Buy Now</button>
+                  <button class="panda-btn-color">Buy Now</button>
               </div>
               <div class="col-lg-5">
                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -73,14 +73,14 @@
             </div>
         </div>
         <div class="carousel-item">
-          <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+          <div class="row p-5 info-background bg-gradient d-flex align-items-center">
             <div class="col-lg-7">
               <h1>X-Box for your living room
               </h1>
               <p>
                 This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                 <h1>$420</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-btn-color">Buy Now</button>
             </div>
             <div class="col-lg-5">
               <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -100,7 +100,7 @@
   </header>
   <main>
     <!--categgries -->
-    <section class="container" id="Watch">
+    <section class="container categories" id="Watch">
     <div class="container my-5">
       <div class="row g-4">
         <div class="col-lg-4 col-md-6 col-12">
@@ -135,7 +135,7 @@
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="panda-btn-color">Buy Now</button>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="panda-btn-color">Buy Now</button>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="panda-btn-color">Buy Now</button>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="panda-btn-color">Buy Now</button>
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="panda-btn-color">Buy Now</button>
             </div>
           </div>
         </div>
@@ -202,7 +202,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="panda-btn-color">Buy Now</button>
             </div>
           </div>
         </div>
@@ -210,15 +210,15 @@
     </section>
 
     <!--subscribe section -->
-    <section style="height: 300px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3" id="subscribe">
+    <section style="height: 300px;" class="container info-background d-flex justify-content-center align-items-center rounded-3" id="subscribe">
             <div>
               <h1>LET'S STAY IN TOUCH
               </h1>
               <p>Get updates on sales, specials and more
               </p>
-              <input type="text" placeholder="your email">
+              <input class="form-control" type="text" placeholder="your email">
               <br>
-              <button class="btn btn-warning rounded-3">Submit</button>
+              <button class="panda-btn-color rounded-3">Submit</button>
             </div>
     </section>
   </main>
