--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
   </header>
   <main>
-    <!--categgries -->
+    <!--categories -->
     <section class="container categories" id="Watch">
     <div class="container my-5">
       <div class="row g-4">
